@@ -10915,6 +10915,113 @@ Number of octets received on the connection.
 --
 
 [float]
+== exchange fields
+
+exchange
+
+
+
+*`rabbitmq.exchange.name`*::
++
+--
+type: keyword
+
+The name of the queue with non-ASCII characters escaped as in C.
+
+
+--
+
+*`rabbitmq.exchange.vhost`*::
++
+--
+type: keyword
+
+Virtual host name with non-ASCII characters escaped as in C.
+
+
+--
+
+*`rabbitmq.exchange.durable`*::
++
+--
+type: boolean
+
+Whether or not the queue survives server restarts.
+
+
+--
+
+*`rabbitmq.exchange.auto_delete`*::
++
+--
+type: boolean
+
+Whether the queue will be deleted automatically when no longer used.
+
+
+--
+
+*`rabbitmq.exchange.internal`*::
++
+--
+type: boolean
+
+Whether the exchange is internal, i.e. cannot be directly published to by a client.
+
+
+--
+
+*`rabbitmq.exchange.user`*::
++
+--
+type: keyword
+
+User who created the exchange.
+
+
+--
+
+*`rabbitmq.exchange.messages.publish_in.count`*::
++
+--
+type: long
+
+Count of messages published "in" to an exchange, i.e. not taking account of routing.
+
+
+--
+
+*`rabbitmq.exchange.messages.publish_in.details.rate`*::
++
+--
+type: float
+
+How much the exchange publish-in count has changed per second in the most recent sampling interval.
+
+
+--
+
+*`rabbitmq.exchange.messages.publish_out.count`*::
++
+--
+type: long
+
+Count of messages published "out" of an exchange, i.e. taking account of routing.
+
+
+--
+
+*`rabbitmq.exchange.messages.publish_out.details.rate`*::
++
+--
+type: float
+
+How much the exchange publish-out count has changed per second in the most recent sampling interval.
+
+
+--
+
+[float]
 == node fields
 
 node
