@@ -40,11 +40,15 @@ The following metricsets are available:
 
 * <<metricbeat-metricset-rabbitmq-connection,connection>>
 
+* <<metricbeat-metricset-rabbitmq-exchange,exchange>>
+
 * <<metricbeat-metricset-rabbitmq-node,node>>
 
 * <<metricbeat-metricset-rabbitmq-queue,queue>>
 
 include::rabbitmq/connection.asciidoc[]
+
+include::rabbitmq/exchange.asciidoc[]
 
 include::rabbitmq/node.asciidoc[]
 
