@@ -1,0 +1,23 @@
+////
+This file is generated! See scripts/docs_collector.py
+////
+
+[[metricbeat-metricset-rabbitmq-exchange]]
+=== RabbitMQ exchange metricset
+
+beta[]
+
+include::../../../module/rabbitmq/exchange/_meta/docs.asciidoc[]
+
+
+==== Fields
+
+For a description of each field in the metricset, see the
+<<exported-fields-rabbitmq,exported fields>> section.
+
+Here is an example document generated by this metricset:
+
+[source,json]
+----
+include::../../../module/rabbitmq/exchange/_meta/data.json[]
+----
