@@ -1,0 +1,22 @@
+[
+    {
+        "message_stats": {
+            "publish_in": 100,
+            "publish_in_details": {
+                "rate": 0.5
+            },
+            "publish_out": 99,
+            "publish_out_details": {
+                "rate": 0.9
+            }
+        },
+        "user_who_performed_action": "guest",
+        "name": "exchange.name",
+        "vhost": "/",
+        "type": "fanout",
+        "durable": true,
+        "auto_delete": false,
+        "internal": false,
+        "arguments": {}
+    }
+]
