@@ -42,6 +42,7 @@ func eventsMapping(content []byte) ([]common.MapStr, error) {
 	err := json.Unmarshal(content, &connections)
 	if err != nil {
 		logp.Err("Error: ", err)
+		return nil, err
 	}
 
 	events := []common.MapStr{}
