@@ -1,0 +1,3 @@
+=== rabbitmq exchange MetricSet
+
+This is the exchange metricset of the module rabbitmq.
